# libsanepp

./: CMakeLists.txt  README.md
include/: SaneDev.hpp
src/: SaneDev.cpp  SaneDevScan.cpp
